added email sender

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=api;Username=postgres;Password=postgres"
   },
+  "SmtpSettings": {
+    "Host": "sandbox.smtp.mailtrap.io",
+    "Port": 2525,
+    "Username": "676371114b67e7",
+    "Password": "bc8da23abb3d9f",
+    "FromAddress": "no_reply@example.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
